# MitchBot

./: .dockerignore  .gitignore  ControlServer.py  Dockerfile  MitchBot.py  Pipfile  Readme.md  docker-compose.yml  grammar.py  letterboxed.py  main.py  poetry.txt  poll.py  prompts.txt  puzzle.py  pyproject.toml  render.py  requirements.in  requirements.txt  responders.py  scheduler.py  speaker.py  spellingbee.py  textresources.py
db/: cities.db  mail.json  nicknames.json  queries.py  setup.py  trieparse.c  trieparse.pyx
db/src/: trieparse.c  trieparse.h
images/: blender_template_1.blend  svg_hexagon_generator.py
static/swordfish/: index.html
text/: poetry.txt  strategies.txt  untamed.txt
